--- a/views/index.erb
+++ b/views/index.erb
@@ -1,5 +1,6 @@
- <h1>My name is <%=["Amigo", "Misty", "Almond"].sample %></h1>
- "<div style='border: 10px dashed red'>
+ <h1>My name is <%= @name %></h1>
+ <div style='border: 10px dashed red'>
     <img src='https://i.imgur.com/cuc4J2A.jpg'>
-  </div>"
+  </div>
 <h1>
+
