--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,6 @@
+ <% if @name %>
  <h1>My name is <%= @name %></h1>
+ <% end %>
  <div style='border: 10px dashed red'>
     <img src='https://i.imgur.com/cuc4J2A.jpg'>
   </div>
