--- a/views/index.erb
+++ b/views/index.erb
@@ -1,8 +1,11 @@
  <% if @name %>
  <h1>My name is <%= @name %></h1>
  <% end %>
+
  <div style='border: 10px dashed red'>
     <img src='https://i.imgur.com/cuc4J2A.jpg'>
   </div>
-<h1>
-
+<form action="/named-cat"> 
+  <input type="text" name="name">
+  <input type="submit" value="submit">
+</form>
