--- a/views/index.erb
+++ b/views/index.erb
@@ -2,10 +2,11 @@
  <h1>My name is <%= @name %></h1>
  <% end %>
 
+<form action="/named-cat"> 
+  <input type="text" name="name">
+  <input type="submit" value="Submit">
+</form>
+
  <div style='border: 10px dashed red'>
     <img src='https://i.imgur.com/cuc4J2A.jpg'>
   </div>
-<form action="/named-cat"> 
-  <input type="text" name="name">
-  <input type="submit" value="submit">
-</form>
