--- a/views/index.erb
+++ b/views/index.erb
@@ -1,5 +1,5 @@
- <% if @name %>
- <h1>My name is <%= @name %></h1>
+ <% if @name.empty?%>
+  <h1>My name is <%= @name %></h1>
  <% end %>
 
 <form action="/named-cat"> 
@@ -7,6 +7,6 @@
   <input type="submit" value="Submit">
 </form>
 
- <div style='border: 10px dashed red'>
-    <img src='https://i.imgur.com/cuc4J2A.jpg'>
-  </div>
+<div style='border: 10px dashed red'>
+  <img src='https://i.imgur.com/cuc4J2A.jpg'>
+</div>
