--- a/views/index.erb
+++ b/views/index.erb
@@ -7,6 +7,8 @@
   <input type="submit" value="Submit">
 </form>
 
-<div style='border: 10px dashed red'>
-  <img src='https://i.imgur.com/cuc4J2A.jpg'>
+<div style='border: 3px dashed red'>
+  <img src='https://i.imgur.com/cuc4J2A.jpg'
+    width="400" 
+     height="400">
 </div>
